--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Dosis:wght@500;700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
 
-  <title>Document</title>
+  <title>Flutuar</title>
 
   <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="image/favicon.svg" type="image/x-icon">
 </head>
 <body>
   <main>
